--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>画板-canvas</title>
 </head>
 <body>
-  <canvas id="canvas" width="100" height="100"></canvas>
+  <div id="canvas"></div>
+  <script src="./app.js"></script>
 </body>
 </html>
