--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>画板-canvas</title>
 </head>
 <body>
-  <div id="canvas"></div>
-  <script src="./app.js"></script>
+  <canvas id="canvas" width="100" height="100"></canvas>
+  <script src="/main.js"></script>
+  <!-- <script src="./app.js"></script> -->
+  <!-- <script src="./画线.js"></script> -->
 </body>
 </html>
